force-app/main/default/objects/Invoice_Allocation__c/Invoice_Allocation__c.object-meta.xml
<CustomObject>
    <label>Invoice Allocation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Invoice Allocation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>