force-app/main/default/objects/Invoice_Allocation__c/fields/Advance_rate__c.field-meta.xml
<CustomField>
    <fullName>Advance_rate__c</fullName>
    <formula>Invoice__r.funded_amount__c /  Invoice__r.Real_Face_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>