force-app/main/default/objects/Invoice_Allocation__c/fields/Advance_rate_CSV_For_CLO__c.field-meta.xml
<CustomField>
    <fullName>Advance_rate_CSV_For_CLO__c</fullName>
    <formula>IF( Advance_rate_for_CSV__c &gt;0.90, 0.90, Advance_rate_for_CSV__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance rate CSV (For CLO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>