force-app/main/default/objects/Invoice_Allocation__c/fields/Advance_rate_for_CLO_Report__c.field-meta.xml
<CustomField>
    <fullName>Advance_rate_for_CLO_Report__c</fullName>
    <formula>IF( Advance_rate__c &gt;=0.9, 0.9, Advance_rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cap the Rate at Max 90 % to avoid confusion for Product 100</inlineHelpText>
    <label>Advance rate (for CLO Report)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>