force-app/main/default/objects/Invoice_Allocation__c/fields/Advance_rate_for_CSV__c.field-meta.xml
<CustomField>
    <fullName>Advance_rate_for_CSV__c</fullName>
    <formula>Invoice__r.funded_amount__c / Invoice__r.invoice_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance rate for CSV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>