force-app/main/default/objects/Invoice_Allocation__c/fields/Allocation_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Confirmed_Date__c</fullName>
    <label>Allocation Confirmed Date</label>
    <type>DateTime</type>
</CustomField>