force-app/main/default/objects/Invoice_Allocation__c/fields/Allocation_Reservation_date__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Reservation_date__c</fullName>
    <label>Allocation Reservation date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>