force-app/main/default/objects/Invoice_Allocation__c/fields/allocation_reservation_date_capped__c.field-meta.xml
<CustomField>
    <fullName>allocation_reservation_date_capped__c</fullName>
    <formula>If( Not(IsBlank(Buyback_Enter_Date__c)), Buyback_Enter_Date__c
, Invoice__r.advance_send_to_supplier_date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>allocation reservation date capped</label>
    <type>Date</type>
</CustomField>