force-app/main/default/objects/Invoice_Allocation__c/fields/Amount_USD_equiv__c.field-meta.xml
<CustomField>
    <fullName>Amount_USD_equiv__c</fullName>
    <formula>amount__c * Invoice__r.Marketplace_link__r.FX_Rate_for_MI__r.rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount USD equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>