force-app/main/default/objects/Invoice_Allocation__c/fields/Annualised_Discount_Rate_CSV__c.field-meta.xml
<CustomField>
    <fullName>Annualised_Discount_Rate_CSV__c</fullName>
    <formula>APR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualised Discount Rate (CSV)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>