force-app/main/default/objects/Invoice_Allocation__c/fields/Applied__c.field-meta.xml
<CustomField>
    <fullName>Applied__c</fullName>
    <formula>IF (Applied_MPR__c  = 0,  MPR__c , Applied_MPR__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied MPR for Reports</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>