force-app/main/default/objects/Invoice_Allocation__c/fields/Applied_Funder_Discount_Profit_Share_Pct__c.field-meta.xml
<CustomField>
    <fullName>Applied_Funder_Discount_Profit_Share_Pct__c</fullName>
    <description>Applied Funder Discount Profit Share Percent applied on this Invoice Allocation</description>
    <label>Applied Funder Discount Profit Share Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>