force-app/main/default/objects/Invoice_Allocation__c/fields/Applied_MPR__c.field-meta.xml
<CustomField>
    <fullName>Applied_MPR__c</fullName>
    <description>Net Funder Discount Rate</description>
    <label>Applied MPR</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>