force-app/main/default/objects/Invoice_Allocation__c/fields/APR_2__c.field-meta.xml
<CustomField>
    <fullName>APR_2__c</fullName>
    <formula>( Applied__c  - ( Applied__c * Applied_Funder_Discount_Profit_Share_Pct__c ) )*12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualised Discount Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>