force-app/main/default/objects/Invoice_Allocation__c/fields/APR__c.field-meta.xml
<CustomField>
    <fullName>APR__c</fullName>
    <description>Annualised Net funder discount rate</description>
    <formula>( funder_discount_amount__c  / amount__c ) * 360 /    Invoice__r.financing_period_for_calcs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annualised Net funder discount rate</inlineHelpText>
    <label>APR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>