force-app/main/default/objects/Invoice_Allocation__c/fields/Balance_upfront_fee_calculation__c.field-meta.xml
<CustomField>
    <fullName>Balance_upfront_fee_calculation__c</fullName>
    <description>This is to be used for balance upfront fee calculation</description>
    <formula>amount__c * Expected_finance_period_buyback_capped__c * Applied_MPR__c /30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance upfront fee calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>