force-app/main/default/objects/Invoice_Allocation__c/fields/Buyback_Enter_Date__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Enter_Date__c</fullName>
    <label>Partially Fund Date</label>
    <type>Date</type>
</CustomField>