force-app/main/default/objects/Invoice_Allocation__c/fields/Buybacked_Date__c.field-meta.xml
<CustomField>
    <fullName>Buybacked_Date__c</fullName>
    <label>Buyback Close Date</label>
    <type>Date</type>
</CustomField>