force-app/main/default/objects/Invoice_Allocation__c/fields/Buyer_name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_name__c</fullName>
    <formula>Invoice__r.Supplier_Buyer_Map__r.Buyer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer name</label>
    <type>Text</type>
</CustomField>