force-app/main/default/objects/Invoice_Allocation__c/fields/Buyer_name_value__c.field-meta.xml
<CustomField>
    <fullName>Buyer_name_value__c</fullName>
    <label>Buyer name value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>