force-app/main/default/objects/Invoice_Allocation__c/fields/Calcul_Weighted_net_funder_rate_annual__c.field-meta.xml
<CustomField>
    <fullName>Calcul_Weighted_net_funder_rate_annual__c</fullName>
    <description>Used fo Calcul of Weighted avarage discount rate net funder</description>
    <formula>APR__c * amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used fo Calcul of Weighted avarage discount rate net funder</inlineHelpText>
    <label>Calcul Weighted net funder rate annual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>