force-app/main/default/objects/Invoice_Allocation__c/fields/Customer_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_2__c</fullName>
    <formula>If( Contains( Customer_Email__c, &quot;@aditumim.com&quot;), &quot;sfi@aditumim.com&quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Email 2</label>
    <type>Text</type>
</CustomField>