force-app/main/default/objects/Invoice_Allocation__c/fields/Customer_Email_2_Typesafe__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_2_Typesafe__c</fullName>
    <label>Customer Email 2</label>
    <type>Email</type>
</CustomField>