force-app/main/default/objects/Invoice_Allocation__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>/* Change Invoice__r.discount_rate__c to Applied_MPR__c */
/* non null Invoice__r.actual_financing_period__c indicates that payment has been received */
/* buyback actual financing period adjusted to either buyback enter or close date */
amount__c * 
  If( Or( Not( isBlank(Buyback_Enter_Date__c)), Invoice__r.actual_financing_period__c &lt;= 0), Expected_finance_period_buyback_capped__c + Overdue_day_capped__c,
  Min( Expected_finance_period_buyback_capped__c + Overdue_day_capped__c, 
  Max( Expected_funding_period_capped__c, 
Invoice__r.actual_financing_period__c
+ If( isBlank(Buybacked_Date__c), 0, Expected_finance_period_buyback_capped__c - Invoice__r.expected_financing_period__c)
  )))
* Applied_MPR__c / 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Brut</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>