force-app/main/default/objects/Invoice_Allocation__c/fields/e_wallet_ID__c.field-meta.xml
<CustomField>
    <fullName>e_wallet_ID__c</fullName>
    <formula>eWallet__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>e-wallet ID</label>
    <type>Text</type>
</CustomField>