force-app/main/default/objects/Invoice_Allocation__c/fields/eWallet__c.field-meta.xml
<CustomField>
    <fullName>eWallet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>eWallet</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.CCY__c</field>
            <operation>equals</operation>
            <valueField>eWallet__c.CCY__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Funder__c</field>
            <operation>equals</operation>
            <valueField>eWallet__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>eWallet__c</referenceTo>
    <relationshipLabel>Invoice Allocations</relationshipLabel>
    <relationshipName>Invoice_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>