force-app/main/default/objects/Invoice_Allocation__c/fields/eWallet_Trustee__c.field-meta.xml
<CustomField>
    <fullName>eWallet_Trustee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>eWallet Trustee</label>
    <referenceTo>eWallet_Trustee__c</referenceTo>
    <relationshipLabel>Invoice Allocations</relationshipLabel>
    <relationshipName>Invoice_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>