force-app/main/default/objects/Invoice_Allocation__c/fields/Expected_finance_period_buyback_capped__c.field-meta.xml
<CustomField>
    <fullName>Expected_finance_period_buyback_capped__c</fullName>
    <formula>/* buyback expected financing period adjusted to either buyback enter or close date */
Min (Invoice__r.expected_financing_period__c + If( isBlank(Invoice__r.advance_send_to_supplier_date__c),
0, If( isBlank(Buyback_Enter_Date__c), 0, Invoice__r.advance_send_to_supplier_date__c - Buyback_Enter_Date__c)),
If( isBlank(Buybacked_Date__c), 65535, Buybacked_Date__c - Invoice__r.advance_send_to_supplier_date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected finance period buyback capped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>