force-app/main/default/objects/Invoice_Allocation__c/fields/Expected_funding_period_capped__c.field-meta.xml
<CustomField>
    <fullName>Expected_funding_period_capped__c</fullName>
    <formula>/* At repayment time If the Buyer pays more than 15 days in advance, all calculation are made as If it had paid 15 days in advance.*/
Max(Expected_finance_period_buyback_capped__c - 15, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected funding period capped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>