force-app/main/default/objects/Invoice_Allocation__c/fields/Expected_Repa__c.field-meta.xml
<CustomField>
    <fullName>Expected_Repa__c</fullName>
    <formula>Invoice__r.calculated_expected_payment_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Repayment date</label>
    <type>Date</type>
</CustomField>