force-app/main/default/objects/Invoice_Allocation__c/fields/For_balance_upfront_fee_calculation__c.field-meta.xml
<CustomField>
    <fullName>For_balance_upfront_fee_calculation__c</fullName>
    <description>This is to be used for balance upfront fee calculation</description>
    <label>For balance upfront fee calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>