force-app/main/default/objects/Invoice_Allocation__c/fields/For_Gross_Funder_discount_amount_overdue__c.field-meta.xml
<CustomField>
    <fullName>For_Gross_Funder_discount_amount_overdue__c</fullName>
    <description>For gross funder discount amount overdue calculation</description>
    <label>For gross fda overdue calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>