force-app/main/default/objects/Invoice_Allocation__c/fields/Funder__c.field-meta.xml
<CustomField>
    <fullName>Funder__c</fullName>
    <label>Funder</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <filterItems>
            <field>Account.Sub_type__c</field>
            <operation>equals</operation>
            <value>Purchaser</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Allocations</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>