force-app/main/default/objects/Invoice_Allocation__c/fields/Funder_Agent_Commision_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Funder_Agent_Commision_Percentage__c</fullName>
    <formula>Funder__r.Agent__r.Agent_Commision_Purchaser_Discount_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funder Agent Commission Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>