force-app/main/default/objects/Invoice_Allocation__c/fields/Funder_Agent_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funder_Agent_Commission_Amount__c</fullName>
    <label>Funder Agent Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>