force-app/main/default/objects/Invoice_Allocation__c/fields/Funder_Agent_Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Funder_Agent_Commission_Type__c</fullName>
    <formula>IF( ISBLANK(TEXT(Funder__r.Agent__r.Agent_Commision_Purchaser_Type__c)), &apos;Part of profit share (%)&apos;, TEXT(Funder__r.Agent__r.Agent_Commision_Purchaser_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funder Agent Commission Type</label>
    <type>Text</type>
</CustomField>