force-app/main/default/objects/Invoice_Allocation__c/fields/funder_agent_ID__c.field-meta.xml
<CustomField>
    <fullName>funder_agent_ID__c</fullName>
    <formula>Funder__r.Agent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>funder agent ID</label>
    <type>Text</type>
</CustomField>