force-app/main/default/objects/Invoice_Allocation__c/fields/Funder_confirmation_receipt__c.field-meta.xml
<CustomField>
    <fullName>Funder_confirmation_receipt__c</fullName>
    <label>Funder confirmation receipt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>