force-app/main/default/objects/Invoice_Allocation__c/fields/funder_discount_amount__c.field-meta.xml
<CustomField>
    <fullName>funder_discount_amount__c</fullName>
    <label>Funder Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>