force-app/main/default/objects/Invoice_Allocation__c/fields/funder_master_agent__c.field-meta.xml
<CustomField>
    <fullName>funder_master_agent__c</fullName>
    <formula>Funder__r.Agent__r.Agent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>funder master agent</label>
    <type>Text</type>
</CustomField>