force-app/main/default/objects/Invoice_Allocation__c/fields/Funder_prepayment__c.field-meta.xml
<CustomField>
    <fullName>Funder_prepayment__c</fullName>
    <defaultValue>&quot;No prepayment&quot;</defaultValue>
    <label>Funder prepayment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No prepayment</fullName>
                <default>true</default>
                <label>No prepayment</label>
            </value>
            <value>
                <fullName>Net EFDA -15days</fullName>
            </value>
            <value>
                <fullName>Gross EFDA</fullName>
                <isActive>false</isActive>
                <label>Gross EFDA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>