force-app/main/default/objects/Invoice_Allocation__c/fields/funder_profit_share_percentage__c.field-meta.xml
<CustomField>
    <fullName>funder_profit_share_percentage__c</fullName>
    <formula>/* Funder__r.discount_profit_share_percent__c /100 */
IF(IsNull(Applied_Funder_Discount_Profit_Share_Pct__c), Current_Funder_Discount_Profit_Share_Pct__c /100, Applied_Funder_Discount_Profit_Share_Pct__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>funder profit share percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>