force-app/main/default/objects/Invoice_Allocation__c/fields/FunderInvoiceUniqueID__c.field-meta.xml
<CustomField>
    <fullName>FunderInvoiceUniqueID__c</fullName>
    <formula>Invoice__r.Name&amp;&quot; &quot;&amp; Funder__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FunderInvoiceUniqueID</label>
    <type>Text</type>
</CustomField>