force-app/main/default/objects/Invoice_Allocation__c/fields/Funding_Email_to_Funders_Sent__c.field-meta.xml
<CustomField>
    <fullName>Funding_Email_to_Funders_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the email for the confirmation of this allocation has been sent to the related funder.</description>
    <label>Funding Email to Funders Sent</label>
    <type>Checkbox</type>
</CustomField>