force-app/main/default/objects/Invoice_Allocation__c/fields/Funding_Spread__c.field-meta.xml
<CustomField>
    <fullName>Funding_Spread__c</fullName>
    <formula>Funder__r.Funding_Spread__c</formula>
    <inlineHelpText>per annum</inlineHelpText>
    <label>Funding Spread</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>