force-app/main/default/objects/Invoice_Allocation__c/fields/FX_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>FX_Amount_USD__c</fullName>
    <formula>if ( isPickVal(CCY__c, &apos;USD&apos;), amount__c, if (isBlank(FX_Contract__c), null, FX_Rate_Auto__c * amount__c))</formula>
    <label>FX Amount USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>