force-app/main/default/objects/Invoice_Allocation__c/fields/FX_Contract__c.field-meta.xml
<CustomField>
    <fullName>FX_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FX Contract</label>
    <referenceTo>FX_Contract__c</referenceTo>
    <relationshipLabel>Invoice Allocations</relationshipLabel>
    <relationshipName>Invoice_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>