force-app/main/default/objects/Invoice_Allocation__c/fields/FX_Rate_Auto__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate_Auto__c</fullName>
    <formula>IF( isBlank(FX_Contract__c), null, if (FX_Rate_manual__c &gt; 0,  FX_Rate_manual__c , null/*FX_Contract__r.Origination_Rate__c*/ ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Rate Auto</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>