force-app/main/default/objects/Invoice_Allocation__c/fields/FX_Rate_manual__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate_manual__c</fullName>
    <label>FX Rate manual</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>