force-app/main/default/objects/Invoice_Allocation__c/fields/Gross_discount_amount_expected_repaid__c.field-meta.xml
<CustomField>
    <fullName>Gross_discount_amount_expected_repaid__c</fullName>
    <formula>/* Change Invoice__r.discount_rate__c to Applied_MPR__c */
amount__c * Applied_MPR__c /30 * Repaid_period_capped__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross discount amount expected repaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>