force-app/main/default/objects/Invoice_Allocation__c/fields/Gross_Discount_Rate_30days_CSV__c.field-meta.xml
<CustomField>
    <fullName>Gross_Discount_Rate_30days_CSV__c</fullName>
    <formula>Applied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Discount Rate (30days) CSV</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>