force-app/main/default/objects/Invoice_Allocation__c/fields/Gross_Funder_discount_amount_overdue__c.field-meta.xml
<CustomField>
    <fullName>Gross_Funder_discount_amount_overdue__c</fullName>
    <formula>/* Change Invoice__r.discount_rate__c to Applied_MPR__c */
amount__c * Applied_MPR__c /30 * Overdue_day_capped__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Funder discount amount overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>