force-app/main/default/objects/Invoice_Allocation__c/fields/Icl_Funder_profit_share_amount_expected__c.field-meta.xml
<CustomField>
    <fullName>Icl_Funder_profit_share_amount_expected__c</fullName>
    <description>- 15 days</description>
    <formula>/* Change Invoice__r.discount_rate__c to Applied_MPR__c */
amount__c * Applied_MPR__c /30 * Expected_funding_period_capped__c * Applied_Funder_Discount_Profit_Share_Pct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icl profit share amount expected funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>