force-app/main/default/objects/Invoice_Allocation__c/fields/Incomlend_commision__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_commision__c</fullName>
    <label>Incomlend commision total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>