force-app/main/default/objects/Invoice_Allocation__c/fields/Incomlend_Profit_share__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_Profit_share__c</fullName>
    <formula>Applied_Funder_Discount_Profit_Share_Pct__c * Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incomlend Profit share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>