force-app/main/default/objects/Invoice_Allocation__c/fields/Invoice_Floating_Rate__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Floating_Rate__c</fullName>
    <description>To calculate floating funder rate</description>
    <formula>Invoice__r.Floating_Rate__c</formula>
    <label>Invoice Floating Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>