force-app/main/default/objects/Invoice_Allocation__c/fields/invoice_phase__c.field-meta.xml
<CustomField>
    <fullName>invoice_phase__c</fullName>
    <formula>text(Invoice__r.Phase__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>invoice phase</label>
    <type>Text</type>
</CustomField>