force-app/main/default/objects/Invoice_Allocation__c/fields/invoice_remaining_amount__c.field-meta.xml
<CustomField>
    <fullName>invoice_remaining_amount__c</fullName>
    <formula>Invoice__r.remaining_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>invoice remaining amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>