force-app/main/default/objects/Invoice_Allocation__c/fields/Is_Summary_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Is_Summary_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Summary Allocation</label>
    <type>Checkbox</type>
</CustomField>