force-app/main/default/objects/Invoice_Allocation__c/fields/marketplace_Min_purchase_amount__c.field-meta.xml
<CustomField>
    <fullName>marketplace_Min_purchase_amount__c</fullName>
    <formula>Invoice__r.Marketplace_link__r.minimum_purchase_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>marketplace Min purchase amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>