force-app/main/default/objects/Invoice_Allocation__c/fields/MPR__c.field-meta.xml
<CustomField>
    <fullName>MPR__c</fullName>
    <description>Monthly Funder Rate Gross</description>
    <formula>/* Replace old formula with CCY based percentage field */
/* (funder_discount_amount__c / amount__c )*30  /  Invoice__r.financing_period_for_calcs__c */

IF(ISPICKVAL(CCY__c, &apos;USD&apos;), Funder__r.Gross_Funder_Discount_Rate_USD__c,
IF(ISPICKVAL(CCY__c, &apos;EUR&apos;), Funder__r.Gross_Funder_Discount_Rate_EUR__c,
IF(ISPICKVAL(CCY__c, &apos;HKD&apos;), Funder__r.Gross_Funder_Discount_Rate_HKD__c,
IF(ISPICKVAL(CCY__c, &apos;SGD&apos;), Funder__r.Gross_Funder_Discount_Rate_SGD__c,
funder_discount_amount__c / amount__c  * 30  /  Invoice__r.financing_period_for_calcs__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Funder Rate Gross</inlineHelpText>
    <label>Current MPR</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>