force-app/main/default/objects/Invoice_Allocation__c/fields/Net_Funder_discount_amount_overdue__c.field-meta.xml
<CustomField>
    <fullName>Net_Funder_discount_amount_overdue__c</fullName>
    <formula>/* Change Invoice__r.discount_rate__c to Applied_MPR__c */
amount__c * Applied_MPR__c /30 * Overdue_day_capped__c * (1 - Applied_Funder_Discount_Profit_Share_Pct__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Funder discount amount overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>